--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Created by https://www.gitignore.io/api/git,java,gradle,intellij
 # Edit at https://www.gitignore.io/?templates=git,java,gradle,intellij
 
+### Binary Files ###
+# Files that are downloaded
+/thirdparty/python/win/python32/Portable_Python_3.2.5.1/
+!/thirdparty/python/win/python32/Portable_Python_3.2.5.1.zip
+
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
