--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@
 #
 
 server.servlet.context-path=/api/v1
-server.address=10.28.112.45
-server.port=9090
+#server.address=10.28.112.45
+server.port=9091
 
