implement pathbuilder on project service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.servlet.context-path=/api/v1
 #server.address=10.28.112.45
 server.port=9091
+export basepath=D:\\MOI
 
 ##Data source
 ##Driver/lib to connect java to mysql
