improve pathBuilder() on projectService with configurable path on aplication.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,7 @@
 server.servlet.context-path=/api/v1
 #server.address=10.28.112.45
 server.port=9091
-export basepath=D:\\MOI
+file.path=D:/MOI
 
-##Data source
-##Driver/lib to connect java to mysql
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-##Url donde esta el servicio de tu mysql y el nombre de la base de datos
-##Url from mysql service and Data Base name
-#spring.datasource.url=jdbc:mysql://localhost:33061/mysql
-##User and password
-#spring.datasource.username=root
-#spring.datasource.password=root
-##Print SQL transactions.
-#spring.jpa.show-sql = true
 
 
