--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+#MOI basic path
 server.servlet.context-path=/api/v1
-#server.address=10.28.112.45
+#MOI server port
 server.port=9091
+#MOI predetermined path to create projects and files
 file.path=D:/MOI
 
 
