Set up file creation, size, and levels

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,10 @@ server.servlet.context-path=/api/v1
 #server.address=10.28.112.45
 server.port=9091
 
+# Output to a temp_folder/file
+logging.file.name=H:/Jala/Fundation/Prog102/temp/application.log
+logging.file.max-size=5MB
 
+# Set up levels
+logging.level.root=info
+logging.level.org.jalasoft=trace
