Change the output file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/api/v1
 server.port=9091
 
 # Output to a temp_folder/file
-logging.file.name=H:/Jala/Fundation/Prog102/temp/application.log
+logging.file.name=C:/temp/moi.log
 logging.file.max-size=5MB
 
 # Set up levels
