--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ logging.file.name=C:/temp/moi.log
 logging.file.max-size=5MB
 
 # Set up levels
+## Log Level: ERROR, WARN, INFO, DEBUG, or TRACE
 logging.level.root=info
-logging.level.org.jalasoft=trace
+logging.level.org.jalasoft=info
