--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
     implementation 'org.springframework.boot:spring-boot-dependencies:2.2.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'io.jsonwebtoken:jjwt:0.2'
