--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.0.100:33061/mysql
+    url: jdbc:mysql://localhost:33061/mysql
     username: root
     password: root
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     database-platform: org.hibernate.dialect.MySQL5Dialect
     database: mysql
     show-sql: true
