--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:33061/mysql
+    url: jdbc:mysql://192.168.0.100:33061/mysql
     username: root
     password: root
   jpa:
