--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ logging.file.max-size=5MB
 ## Log Level: ERROR, WARN, INFO, DEBUG, or TRACE
 logging.level.root=info
 logging.level.org.jalasoft=info
+
+# Tokens
+jwt.secret = javainuse
